Case List columns need to wrap better RIUI-932 fixed (#599)

--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -25,5 +25,9 @@ cdk-cell {
     display: table-cell;
 }
 
+.cdk-column-createdDate {
+    width: 110px;
+}
+
 ////////////////////////////////////////
 ////////////////////////////////////////
